--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
-    <string name="app_name">SimpleVirus</string>
+    <string name="app_name">Virus News</string>
+    <string name="abouttext">The Virus-Newsletter-App was developed by
+        Aljosha Vieth \nhttps://AljoshaVieth.eu</string>
+    <string name="about_menu">About</string>
+    <string name="imprint_menu">Imprint</string>
+    <string name="rss_error">Sorry, could not load the news. Check your connection</string>
+    <string name="loading">Loading...</string>
+    <string name="article_load_error">Error while loading article. Please check your connection</string>
+    <string name="about_this_app">About this app</string>
+    <string name="open_source_licenses">Open-Source-Licenses</string>
 </resources>
